<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtSelec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccion" />

    <LinearLayout
        android:id="@+id/linearHijo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>