<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtIdentificador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idenfiticador"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNombreCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAnadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anadir" />

    </LinearLayout>
</LinearLayout>